Fix T99687: Cloth filter crash

The code was failing to exclude the sculpt object from
the list of collision objects.